@@ -14,6 +14,17 @@ Features
   checked input, radio choice, checked password, and dateparts widgets
   (via Ergo^). See http://bugs.repoze.org/issue165.
 
+Dependencies
+~~~~~~~~~~~~
+
+- Deform now depends on ``colander`` version 0.8 or better (the demo
+  wants to use schema bindings).
+
+Demo
+~~~~
+
+- New addition to the demonstration application: schema binding.
+
 0.6 (2010-09-03)
 ----------------
 
